web: fix vertical overflow for build event fallback lines
Honestly not sure why this only impacts build event fallback.
I can't see any regression by removing this across other log
line types including long wrapping ones etc.

These messages are only visible with `--debug` anyway, so not
a big deal. There was always a slight truncation but it's much
more severe with the reduced font size.

--- a/web/src/LogPaneLine.scss
+++ b/web/src/LogPaneLine.scss
@@ -4,7 +4,6 @@
 
 .LogPaneLine {
   display: flex;
-  position: relative;
   font-size: $font-size-smallest;  
 
   &.is-highlighted {
